--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
-   <h1 class="teste">yo</h1>
+   <h1 class="titulo">Beneficios e modos de cultivar um plantio saúdavel</h1>
+   
    <body></body>
 </html>
