--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Plantio Saúdavel</title>
 </head>
 <body>
-
+    <div class="container-pagina1">
    <h1 class="titulo">Beneficios e modos de cultivar um plantio saúdavel</h1>
-   
+   </div>
+
    <body></body>
 </html>
