--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Plantio Saúdavel</title>
 </head>
 <body>
-    <div class="container-pagina1">
+    <div class="container">
    <h1 class="titulo">Beneficios e modos de cultivar um plantio saúdavel</h1>
    </div>
 
