--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-   <h1 class="titulo">Beneficios e modos de cultivar um plantio saúdavel</h1>
+   <h1>Beneficios e modos de cultivar um plantio saúdavel</h1>
    </div>
 
    <body></body>
