--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <title>Plantio Saúdavel</title>
 </head>
 <body>
+    <header>
     <div class="container">
    <h1 class="titulo">Beneficios e maneiras de cultivar um plantio saúdavel</h1>
+   <img src="fruit basket-pana.png" alt="Logo">
+   <button
    </div>
 
    <body></body>
