--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
     <div class="container">
    <h1 class="titulo">Beneficios e maneiras de cultivar um plantio saúdavel</h1>
-   <img src="fruit basket-pana.png" alt="Logo">
+   <img class="imagem-logo" scr="fruit basket-pana.png" alt="Logo">
    <button
    </div>
 
