--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Kalnia:wdth,wght@102.9,100..700&display=swap" rel="stylesheet">
     <title>Plantio Saúdavel</title>
+
 </head>
+
 <body>
+
     <header>
+
     <div class="container">
+        <ul id="menu-horizontal">
+            <li>Menu</li>
+            <li>Beneficios</li>
+            <li>Dificuldades</li>
+            <li>Hort-Fruit</li>
+        </ul>
    <h1 class="titulo">Beneficios e maneiras de cultivar um plantio saúdavel</h1>
-   <img class="imagem-logo" scr="fruit basket-pana.png" alt="Logo">
-   <button
    </div>
 
    <body></body>
