--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 </head>
 
 <body>
-
-    <header>
-
+    
     <div class="container">
-        <ul id="menu-horizontal">
-            <li>Menu</li>
-            <li>Beneficios</li>
-            <li>Dificuldades</li>
-            <li>Hort-Fruit</li>
-        </ul>
+        <nav id="menu-horizontal">
+            <ul>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Beneficios</a></li>
+                <li><a href="#">Dificuldades</a></li>
+                <li><a href="#">Hort-frut</a></li>
+            </ul>
+            
+        </nav>
    <h1 class="titulo">Beneficios e maneiras de cultivar um plantio saúdavel</h1>
+  
    </div>
 
    <body></body>
