--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     
-    <div class="container">
+    <header>
         <nav id="menu-horizontal">
             <ul>
                 <li><a href="#">Menu</a></li>
@@ -23,6 +23,8 @@
             </ul>
             
         </nav>
+    </header>
+        <div class="container">
    <h1 class="titulo">Beneficios e maneiras de cultivar um plantio saúdavel</h1>
   
    </div>
